Abstract code a bit better and make it work again

--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,11 @@
     "default_icon": "icons/19.png",
     "default_popup": "popup/index.html"
   },
-  "permissions": [ "tabs", "storage", "cookies", "http://*/*", "https://*/*" ]
+  "permissions": [
+    "tabs",
+    "storage",
+    "cookies",
+    "http://*/*",
+    "https://*/*"
+  ]
 }
